--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,9 +1,14 @@
 .header {
   width: 100%;
 }
-.header .head {
-  width: 100%;
-  padding: 30px 0;
+.header h1 {
+  padding: 15px 0 0 80px;
+  font-size: 22px;
+}
+.header h2 {
+  margin: 20px 80px;
+  color: #8e8d8d;
+  font: 12px "宋体", Arial, Helvetica, sans-serif;
 }
 .header .nav {
   position: relative;
