--- a/src/components/header/header.less
+++ b/src/components/header/header.less
@@ -1,8 +1,13 @@
 .header {
     width: 100%;
-    .head {
-        width: 100%;
-        padding: 30px 0;
+    h1 {
+        padding: 15px 0 0 80px;
+        font-size: 22px;
+    }
+    h2 {
+        margin: 20px 80px;
+        color: #8e8d8d;
+        font: 12px "宋体", Arial, Helvetica, sans-serif;
     }
     .nav {
         position: relative;
